Test Environment/cloud-resources/samples/gatekeeper/bucket-constaint.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredBucketVersioning
metadata:
  name: bucket-must-have-versioning
spec:
  match:
    kinds:
    - apiGroups: ["storage.cnrm.cloud.google.com"]
      kinds: ["StorageBucket"]
  parameters:
    versioning:
      enabled: true
