Test Environment/cloud-resources/samples/gatekeeper/bucket-constraint-template.yml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredbucketversioning
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredBucketVersioning
        plural: k8srequiredbucketversioning
        singular: k8srequiredbucketversioning
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            versioning:
              properties:
                enabled:
                  type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
        package k8srequiredbucketversioning

        violation[{"msg": msg, "detail": ""}] {
          provided := input.review.object.spec.versioning["enabled"]
          required := input.parameters.versioning["enabled"]
          provided != required
          msg := "Storage bucket needs to have versioning enabled"
        }
